# SWAN

./: CMakeLists.txt  README.md  build_mpi.sh  build_omp.sh  test.txt
cmake/: FindMetis.cmake
res/: version_number-mpi.rc.svn  version_number-omp.rc.svn  version_number.ini
src/: CMakeLists.txt  HRextensions.f90  HRextensions.ftn90  HottifySWAN.ftn90  INSTALL.README  Makefile  SdsBabanin.ftn90  SwanBndStruc.ftn90  SwanBpntlist.ftn90  SwanCheckGrid.ftn90  SwanCompUnstruc.ftn90  SwanComputeForce.ftn90  SwanInitCompGrid.ftn90  SwanReadADCGrid.ftn90  WTI2010_settings.txt  agioncmd.ftn90  build_mpi.sh  build_omp.sh  conc.lst  latexfordummies.tex  nctablemd.ftn90  netcdf_tools.f90  netcdf_tools.ftn90  ocpcre.ftn  ocpids.ftn  ocpmix.ftn  platform.pl  srclist.cmake  srclistnc.cmake  swan.edt  swancom1.ftn  swancom2.ftn  swancom3.ftn  swancom4.ftn  swancom5.ftn  swanhcat.ftn  swanimp.tex  swanmain.F  swanmain.ftn  swanout1.ftn  (+15 more)
src/docker/: Dockerfile  readme.txt  run_docker_NZ.sh
src/linux64_gnu/: copy_sources.sh  macros.inc  platform.pl  readme.txt
src/linux64_mpi/: Makefile  copy_sources.sh  copy_sources_dpc.sh  macros.inc  readme.txt
src/linux64_omp/: Makefile  copy_sources.sh  copy_sources_dpc.sh  link_lib.sh  macros.inc  readme.txt
src/netcdf/cmake_deltares/: CMakeLists.txt
src/netcdf/netcdf-fortran-4.4.4/fortran/: module_netcdf_nc_data.F90
src/windows/: copy_sources.bat  macros.inc  readme.txt  release_build.bat  swan.sln  swan.vfproj
swan_mpi/: CMakeLists.txt
swan_omp/: CMakeLists.txt
